<resources>
    <string name="app_name">My Application</string>
<<<<<<< HEAD
    <string name="protegt">ProteGT</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="empecemos">Empecemos</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="reg_strate">Regístrate</string>
    <string name="nada">nada?</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_as_no_coinciden">Contraseñas no coinciden</string>
=======
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab
</resources>