<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/loginBtn2"
        android:layout_width="173sp"
        android:layout_height="52sp"
        android:background="@drawable/button1"
        android:fontFamily="@font/regular"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/user"
        android:layout_width="316sp"
        android:layout_height="57sp"
        android:layout_marginTop="160dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/password"
        android:layout_width="316sp"
        android:layout_height="57sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.87" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="316sp"
        android:layout_height="57sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/usuario"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/contrase_a"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/confirmar_contrase_a"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/bold"
        android:text="Nuevo Usuario"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/error1"
        android:layout_width="282dp"
        android:layout_height="19dp"
        android:text="@string/contrase_as_no_coinciden"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.238" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/union"
        tools:layout_editor_absoluteX="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>