<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="316sp"
        android:layout_height="57sp"
<<<<<<< HEAD
        android:layout_marginTop="60dp"
        android:layout_marginBottom="250dp"
=======
        android:layout_marginBottom="308dp"
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab
        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
<<<<<<< HEAD
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />
=======
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="98dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="316sp"
        android:layout_height="57sp"
<<<<<<< HEAD
        android:layout_marginTop="208dp"
=======
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab
        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
<<<<<<< HEAD
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/bold"
        android:text="@string/inicio_de_sesi_n"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />
=======
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="37dp"
        android:fontFamily="@font/bold"
        android:text="Inicio de sesión"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/rectangle" />
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
<<<<<<< HEAD
        android:text="@string/usuario"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.823" />
=======
        android:text="Usuario"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
<<<<<<< HEAD
        android:text="@string/contrase_a"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.853" />
=======
        android:text="Contraseña"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="173sp"
        android:layout_height="52sp"
<<<<<<< HEAD
        android:background="@drawable/button1"
        android:fontFamily="@font/regular"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:layout_marginBottom="50dp"
        android:background="#00FFFFFF"
        android:includeFontPadding="false"
        android:text="@string/reg_strate"
        android:textColor="#3C3F41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.434" />
=======
        android:fontFamily="@font/regular"
        android:text="Ingresar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/button1"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="Regístrate"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />
>>>>>>> d723ffbb28e2daff897d2bc40e62cdc0962771ab
</androidx.constraintlayout.widget.ConstraintLayout>